terraform-infra-code/c4-ec2securitygroups.tf
resource "aws_security_group" "terraform2-SG-ssh" {
    name = "allow_ssh"
    description = "Allow ssh traffic from any ip"
    ingress {
        description = "allow port 22"
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        description = "Allow traffic from instance to all ip"
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = {
      Name = "SG-web-terraform2"
    }
}


resource "aws_security_group" "terraform2-SG-web" {
    name = "allow_web"
    description = "Allow web traffic from any ip"
    ingress {
        description = "allow port 80"
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        description = "allow port 443"
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        description = "Allow traffic from instance to all ip"
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = {
      Name = "SG-ssh-terraform2"
    }
}
